feat: add all pages

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,7 @@
             <div class="container">
                 <div class="columns">
                     <div class="columns__col columns__col--6">
-                        <h1>Dranik</h1>
-                        <div class="editor">
-                            <h1>
-                                Dranik
-                            </h1>
-                            <p>
-                                Стартовый шаблон для разработки
-                            </p>
-                        </div>
+
                     </div>
                     <div class="columns__col columns__col--6">
                         <svg>
@@ -32,6 +24,7 @@
             </div>
         </section>
     </main>
+    <%= htmlWebpackPlugin.options.sectionPartners %>
     <%= htmlWebpackPlugin.options.sectionFooter %>
     <%= htmlWebpackPlugin.options.temp %>
 </body>
