feat: add markup

--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,176 @@
 </head>
 
 <body class="body">
-    <%= htmlWebpackPlugin.options.sectionHeader %>
-    <main class="main">
-        <section class="section">
-            <div class="container">
-                <div class="columns">
-                    <div class="columns__col columns__col--6">
+<%= htmlWebpackPlugin.options.sectionHeader %>
+<main class="main">
+    <section class="section">
+        <div class="container" style="height: 300px;">
+            Калькулятор
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="columns__col columns__col--6">
 
+                </div>
+                <div class="columns__col columns__col--6">
+                    <svg>
+                        <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section pt-80 pb-15 relative decor-1">
+        <div class="container">
+            <div class="columns columns--center columns--tab-start">
+                <div class="columns__col columns__col--5 columns__col--tab-12 mbt-10 mbm-0">
+                    <div class="columns">
+                        <div class="columns__col columns__col--12 columns__col--tab-3">
+                            <h2 class="title">
+                                О DFL
+                            </h2>
+                        </div>
+                        <div class="columns__col columns__col--12 columns__col--tab-9">
+                            <div class="editor color-primary fz-14 fz-mob-16">
+                                <p>
+                                    DFL – транспортная компания, предоставляющая комплексный логистический сервис, которая
+                                    помогает развивать конкурентные преимущества своих клиентов за счет использования лучших
+                                    транспортных и информационных технологии в организации управления цепочками поставок.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="columns__col columns__col--6">
-                        <svg>
-                            <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
-                        </svg>
+                </div>
+                <div class="columns__col columns__col--7 columns__col--tab-12">
+                    <div class="columns columns--mob-gap-12">
+                        <div class="columns__col columns__col--6 columns__col--mob-1">
+                            <article class="article-factoid bg-white">
+                                <h3 class="article-factoid__title">
+                                    <strong>14</strong> млн.евро
+                                </h3>
+                                <p class="article-factoid__text">
+                                    Годовой оборот (2012)
+                                </p>
+                            </article>
+                        </div>
+                        <div class="columns__col columns__col--6 columns__col--mob-1">
+                            <article class="article-factoid bg-white">
+                                <h3 class="article-factoid__title">
+                                    <strong>10 000</strong> м<sup>2</sup>
+                                </h3>
+                                <p class="article-factoid__text">
+                                    Складских площадей класса А с системой Red Prairie
+                                </p>
+                            </article>
+                        </div>
+                        <div class="columns__col columns__col--6 columns__col--mob-1">
+                            <article class="article-factoid bg-white">
+                                <h3 class="article-factoid__title">
+                                    <strong>150</strong> сотрудников
+                                </h3>
+                                <p class="article-factoid__text">
+                                    Владеющих иностранными языками
+                                </p>
+                            </article>
+                        </div>
+                        <div class="columns__col columns__col--6 columns__col--mob-1">
+                            <article class="article-factoid bg-white">
+                                <h3 class="article-factoid__title">
+                                    <strong>2 000</strong> м<sup>2</sup>
+                                </h3>
+                                <p class="article-factoid__text">
+                                    Офисных и бытовых площадей
+                                </p>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="columns__col columns__col--6">
+
+                </div>
+                <div class="columns__col columns__col--6">
+                    <svg>
+                        <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section pb-40 pt-65 ptl-40 ptt-25 pbt-25 pbm-40 pbm-40">
+        <div class="container">
+            <div class="toolbar mb-20">
+                <h2 class="title ">
+                    Документы
+                </h2>
+            </div>
+            <div class="links-doc">
+                <a class="article-doc" href="">
+                    <div class="article-doc__main">
+                        <p>Свидетельство о государственной перерегистрации юридического лица</p>
+                    </div>
+                    <div class="article-doc__aside">
+                        <span class="article-doc__caption">
+                            Скачать документ
+                        </span>
+                        <svg class="article-doc__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-file"></use>
+                        </svg>
+                    </div>
+                </a>
+                <a class="article-doc" href="">
+                    <div class="article-doc__main">
+                        <p>Правилами транспортно-экспедиционной деятельности (утв. Постановлением Правительства РФ от
+                            08.09.2006 г. № 554)</p>
+                    </div>
+                    <div class="article-doc__aside">
+                        <span class="article-doc__caption">
+                            Скачать документ
+                        </span>
+                        <svg class="article-doc__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-file"></use>
+                        </svg>
+                    </div>
+                </a>
+                <a class="article-doc" href="">
+                    <div class="article-doc__main">
+                        <p>Приложение 4.1.6 Письмо ФНС от 21.08.2009 г. № ШС-22-3/660 "О направлении систематизированных
+                            материалов по документированию операций при транспортировке товаров")</p>
+                    </div>
+                    <div class="article-doc__aside">
+                        <span class="article-doc__caption">
+                            Скачать документ
+                        </span>
+                        <svg class="article-doc__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-file"></use>
+                        </svg>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="toolbar mb-20">
+                <h2 class="title ">
+                    Что о нас говорят
+                </h2>
+            </div>
+        </div>
+    </section>
     <%= htmlWebpackPlugin.options.sectionPartners %>
-    <%= htmlWebpackPlugin.options.sectionFooter %>
-    <%= htmlWebpackPlugin.options.temp %>
+</main>
+
+<%= htmlWebpackPlugin.options.sectionFooter %>
+<%= htmlWebpackPlugin.options.temp %>
 </body>
 
 </html>
