--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -23,6 +23,56 @@
             </div>
         </div>
     </section>
+    <section class="section pb-80 pt-40 ptl-40 ptt-80 ptm-40 pbt-25 pbm-40 pbm-40">
+        <div class="container">
+            <h2 class="title mb-30">
+                Документы
+            </h2>
+            <div class="links-doc">
+                <a class="article-doc" href="">
+                    <div class="article-doc__main">
+                        <p>Свидетельство о государственной перерегистрации юридического лица</p>
+                    </div>
+                    <div class="article-doc__aside">
+                        <span class="article-doc__caption">
+                            Скачать документ
+                        </span>
+                        <svg class="article-doc__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-file"></use>
+                        </svg>
+                    </div>
+                </a>
+                <a class="article-doc" href="">
+                    <div class="article-doc__main">
+                        <p>Правилами транспортно-экспедиционной деятельности (утв. Постановлением Правительства РФ от
+                            08.09.2006 г. № 554)</p>
+                    </div>
+                    <div class="article-doc__aside">
+                        <span class="article-doc__caption">
+                            Скачать документ
+                        </span>
+                        <svg class="article-doc__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-file"></use>
+                        </svg>
+                    </div>
+                </a>
+                <a class="article-doc" href="">
+                    <div class="article-doc__main">
+                        <p>Приложение 4.1.6 Письмо ФНС от 21.08.2009 г. № ШС-22-3/660 "О направлении систематизированных
+                            материалов по документированию операций при транспортировке товаров")</p>
+                    </div>
+                    <div class="article-doc__aside">
+                        <span class="article-doc__caption">
+                            Скачать документ
+                        </span>
+                        <svg class="article-doc__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-file"></use>
+                        </svg>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
 </main>
 <%= htmlWebpackPlugin.options.sectionPartners %>
 <%= htmlWebpackPlugin.options.sectionFooter %>
