feat: add shift-block

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,49 @@
             Калькулятор
         </div>
     </section>
-    <section class="section">
+    <section class="section relative z-index-1">
         <div class="container">
-            <div class="columns">
-                <div class="columns__col columns__col--6">
-
+            <div class="shift shift--main">
+                <div class="shift__picture">
+                    <img alt="" src="./assets/content/ill-1.jpg">
                 </div>
-                <div class="columns__col columns__col--6">
-                    <svg>
-                        <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
-                    </svg>
+                <div class="shift__content">
+                    <h2 class="title mb-20">
+                        DFL осуществляет перевозки сборных грузов:
+                    </h2>
+                    <div class="editor color-primary fz-14 fz-mob-16">
+                        <ul>
+                            <li>
+                                Автомобильные перевозки в странах ЕС, России и СНГ, в том числе сборных и
+                                рефрижераторных грузов.
+                            </li>
+                            <li>
+                                Сопутствующие таможенные формальности в странах отправления и назначения грузов.
+                            </li>
+                            <li>
+                                Доставку опасных и негабаритных грузов.
+                            </li>
+                            <li>
+                                Консолидацию и обработку сборных грузов на собственных складах в странах ЕС, Москве и
+                                Калининграде.
+                            </li>
+                            <li>
+                                Консультацию в юридических вопросах ВЭД, взаимодействию с органами сертификации.
+                            </li>
+                        </ul>
+                        <!--                        <p>-->
+                        <!--                            DFL - глобальный логистический оператор, лидер в области логистических процессов на-->
+                        <!--                            международном рынке. Штаб-квартира компании находится в Дании, в городе Копенгегене, где DFL-->
+                        <!--                            была основана в 1976 году.-->
+                        <!--                        </p>-->
+                        <!--                        <p>-->
+                        <!--                            В Калининграде DFL представлена компанией ООО "ДФЛ Транспорт", которая более 20 лет-->
+                        <!--                            оперирует на-->
+                        <!--                            региональном рынке и успела из обычного международного экспедитора превратиться в ведущего-->
+                        <!--                            поставщика интегрированных решений сети поставок для широкого спектра отраслей-->
+                        <!--                            промышленности.-->
+                        <!--                        </p>-->
+                    </div>
                 </div>
             </div>
         </div>
@@ -41,9 +74,12 @@
                         <div class="columns__col columns__col--12 columns__col--tab-9">
                             <div class="editor color-primary fz-14 fz-mob-16">
                                 <p>
-                                    DFL – транспортная компания, предоставляющая комплексный логистический сервис, которая
-                                    помогает развивать конкурентные преимущества своих клиентов за счет использования лучших
-                                    транспортных и информационных технологии в организации управления цепочками поставок.
+                                    DFL – транспортная компания, предоставляющая комплексный логистический сервис,
+                                    которая
+                                    помогает развивать конкурентные преимущества своих клиентов за счет использования
+                                    лучших
+                                    транспортных и информационных технологии в организации управления цепочками
+                                    поставок.
                                 </p>
                             </div>
                         </div>
