--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -23,6 +23,34 @@
             </div>
         </div>
     </section>
+    <section class="section relative z-index-1">
+        <div class="container">
+            <div class="shift shift--about">
+                <div class="shift__picture">
+                    <img alt="" src="./assets/content/ill-2.jpg">
+                </div>
+                <div class="shift__content">
+                    <h2 class="title mb-20">
+                        Кто мы?
+                    </h2>
+                    <div class="editor color-primary fz-14 fz-mob-16">
+                        <p>
+                            DFL - глобальный логистический оператор, лидер в области логистических процессов на
+                            международном рынке. Штаб-квартира компании находится в Дании, в городе Копенгегене, где DFL
+                            была основана в 1976 году.
+                        </p>
+                        <p>
+                            В Калининграде DFL представлена компанией ООО "ДФЛ Транспорт", которая более 20 лет
+                            оперирует на
+                            региональном рынке и успела из обычного международного экспедитора превратиться в ведущего
+                            поставщика интегрированных решений сети поставок для широкого спектра отраслей
+                            промышленности.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="section pb-80 pt-40 ptl-40 ptt-80 ptm-40 pbt-25 pbm-40 pbm-40">
         <div class="container">
             <h2 class="title mb-30">
