feat: add markup elements

--- a/src/index.html
+++ b/src/index.html
@@ -44,18 +44,6 @@
                                 Консультацию в юридических вопросах ВЭД, взаимодействию с органами сертификации.
                             </li>
                         </ul>
-                        <!--                        <p>-->
-                        <!--                            DFL - глобальный логистический оператор, лидер в области логистических процессов на-->
-                        <!--                            международном рынке. Штаб-квартира компании находится в Дании, в городе Копенгегене, где DFL-->
-                        <!--                            была основана в 1976 году.-->
-                        <!--                        </p>-->
-                        <!--                        <p>-->
-                        <!--                            В Калининграде DFL представлена компанией ООО "ДФЛ Транспорт", которая более 20 лет-->
-                        <!--                            оперирует на-->
-                        <!--                            региональном рынке и успела из обычного международного экспедитора превратиться в ведущего-->
-                        <!--                            поставщика интегрированных решений сети поставок для широкого спектра отраслей-->
-                        <!--                            промышленности.-->
-                        <!--                        </p>-->
                     </div>
                 </div>
             </div>
@@ -205,6 +193,49 @@
                 <h2 class="title ">
                     Что о нас говорят
                 </h2>
+            </div>
+            <div style="width: 50%">
+                <article class="article-review">
+                    <div class="article-review__header">
+                        <picture class="article-review__logo">
+                            <img src="./assets/content/logo-review-1.svg" alt="">
+                        </picture>
+                        <div class="article-review__info">
+                            <h3 class="article-review__organization">
+                                Бауцентр
+                            </h3>
+                            <h4 class="article-review__name">
+                                Линевич Денис Александрович
+                            </h4>
+                            <p class="article-review__position">
+                                Менеджер
+                            </p>
+                        </div>
+                    </div>
+                    <div class="article-review__main">
+                        <div class="editor fz-14 color-primary">
+                            <p>
+                                Компания Бауцентр имеет совместный, продолжительный опыт сотрудничества с «DFL –
+                                Транспорт» более 12 лет. За это время мы убедились в высоком профессионализме
+                                сотрудников компании «DFL-Транспорт». Компания Бауцентр имеет совместный,
+                                продолжительный опыт сотрудничества с «DFL –
+                                Транспорт» более 12 лет. За это время мы убедились в высоком профессионализме
+                                сотрудников компании «DFL-Транспорт».Компания Бауцентр имеет совместный, продолжительный
+                                опыт сотрудничества с «DFL –
+                                Транспорт» более 12 лет. За это время мы убедились в высоком профессионализме
+                                сотрудников компании «DFL-Транспорт».
+                            </p>
+                        </div>
+                    </div>
+                    <a href="" class="article-review__footer">
+                        <span class="article-review__link">
+                            Полный отзыв
+                        </span>
+                        <svg class="article-review__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                        </svg>
+                    </a>
+                </article>
             </div>
         </div>
     </section>
