--- a/src/pages/handbook.html
+++ b/src/pages/handbook.html
@@ -23,6 +23,54 @@
             </div>
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <!-- Дестрой на планшете и мобилке -->
+            <div class="slider" data-slider="handbook">
+                <div class="toolbar mb-30">
+                    <h2 class="title">
+                        Галерея
+                    </h2>
+                    <div data-nav>
+                        <button data-button-prev>
+                            Назад
+                        </button>
+                        <button data-button-next>
+                            Вперед
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-container slider__container">
+                    <div class="swiper-wrapper slider__wrapper">
+                        <div class="swiper-slide slider__slide">
+                            1
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            2
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            3
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            4
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            5
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            6
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            7
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            8
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <%= htmlWebpackPlugin.options.sectionPartners %>
 <%= htmlWebpackPlugin.options.sectionFooter %>
