--- a/src/pages/info.html
+++ b/src/pages/info.html
@@ -11,14 +11,100 @@
 <main class="main">
     <section class="section">
         <div class="container">
-            <div class="columns">
-                <div class="columns__col columns__col--6">
-
+            <div class="slider" data-slider="news">
+                <div class="toolbar mb-30">
+                    <h2 class="title">
+                        Новости
+                    </h2>
+                    <span>
+                        Показать все
+                    </span>
+                    <!--                    <div data-nav>-->
+                    <!--                        <button data-button-prev>-->
+                    <!--                            Назад-->
+                    <!--                        </button>-->
+                    <!--                        <button data-button-next>-->
+                    <!--                            Вперед-->
+                    <!--                        </button>-->
+                    <!--                    </div>-->
                 </div>
-                <div class="columns__col columns__col--6">
-                    <svg>
-                        <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
-                    </svg>
+                <div class="swiper-container slider__container">
+                    <div class="swiper-wrapper slider__wrapper">
+                        <div class="swiper-slide slider__slide">
+                            1
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            2
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            3
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            4
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            5
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            6
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            7
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            8
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="slider" data-slider="analytics">
+                <div class="toolbar mb-30">
+                    <h2 class="title">
+                        Аналитика по рынку
+                    </h2>
+                    <span>
+                        Показать все
+                    </span>
+<!--                    <div data-nav>-->
+<!--                        <button data-button-prev>-->
+<!--                            Назад-->
+<!--                        </button>-->
+<!--                        <button data-button-next>-->
+<!--                            Вперед-->
+<!--                        </button>-->
+<!--                    </div>-->
+                </div>
+                <div class="swiper-container slider__container">
+                    <div class="swiper-wrapper slider__wrapper">
+                        <div class="swiper-slide slider__slide">
+                            1
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            2
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            3
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            4
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            5
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            6
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            7
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            8
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
