feat: add markup

--- a/src/index.html
+++ b/src/index.html
@@ -368,7 +368,7 @@
             </div>
         </div>
     </section>
-    <section class="section z-index-1 mb-60 mbl-80">
+    <section class="section z-index-1 mb-80 mbm-70">
         <div class="container">
             <div class="slider" data-slider="services">
                 <div class="toolbar mb-25">
